--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -3,31 +3,31 @@
       <div class="form-group">
         <label for="name" class="text-light">Name</label>
         <input type="hidden" name="id" value="" />
-        <input type="text" name="name" value="" placeholder="Jennifer Anniston"/>
+        <input type="text" name="name" value="" placeholder="Jennifer Anniston" required/>
       </div>
       <div class="form-group">
         <label for="email" class="text-light">Email</label>
-        <input type="text" name="email" value="" placeholder="eample@gmail.com"/>
+        <input type="text" name="email" value="" placeholder="eample@gmail.com" required/>
       </div>
       <div class="form-group">
         <label for="gender" class="text-light">Gender</label>
         <div class="radio inline">
-          <input type="radio" id="radio-2" name="gender" value="Male"/>
+          <input type="radio" id="radio-2" name="gender" value="Male" required/>
           <label for="radio-2" class="radio-label">Male</label>
         </div>
         <div class="radio inline">
-          <input type="radio" id="radio-3" name="gender" value="Female"/>
+          <input type="radio" id="radio-3" name="gender" value="Female" required/>
           <label for="radio-3" class="radio-label">Female</label>
         </div>
       </div>
       <div class="form-group">
         <label for="status" class="text-light">Status</label>
         <div class="radio inline">
-          <input type="radio" id="radio-4" name="status" value="Active"/>
+          <input type="radio" id="radio-4" name="status" value="Active" required/>
           <label for="radio-4" class="radio-label">Active</label>
         </div>
         <div class="radio inline">
-          <input type="radio" id="radio-5" name="status" value="Inactive"/>
+          <input type="radio" id="radio-5" name="status" value="Inactive" required/>
           <label for="radio-5" class="radio-label">Inactive</label>
         </div>
       </div>
