--- a/views/update_user.ejs
+++ b/views/update_user.ejs
@@ -12,37 +12,36 @@
       <h2 class="text-dark">Update User</h2>
       <span class="text-light">Use the below form to update an account</span>
     </div>
-    <!-- Form handling -->
     <form id="update_user" method="POST">
         <div class="new-user">
           <div class="form-group">
             <label for="name" class="text-light">Name</label>
             <input type="hidden" name="id" value="<%=user._id%>" />
-            <input type="text" name="name" value="<%=user.name%>" placeholder="Jennifer Anniston"/>
+            <input type="text" name="name" value="<%=user.name%>" placeholder="Jennifer Anniston" required/>
           </div>
           <div class="form-group">
             <label for="email" class="text-light">Email</label>
-            <input type="text" name="email" value="<%=user.email%>" placeholder="eample@gmail.com"/>
+            <input type="text" name="email" value="<%=user.email%>" placeholder="eample@gmail.com" required/>
           </div>
           <div class="form-group">
             <label for="gender" class="text-light">Gender</label>
             <div class="radio inline">
-              <input type="radio" id="radio-2" name="gender" value="Male" <%=user.gender == 'Male'?'checked':''%> />
+              <input type="radio" id="radio-2" name="gender" value="Male" required <%=user.gender == 'Male'?'checked':''%>/>
               <label for="radio-2" class="radio-label">Male</label>
             </div>
             <div class="radio inline">
-              <input type="radio" id="radio-3" name="gender" value="Female" <%=user.gender == 'Female'?'checked':''%> />
+              <input type="radio" id="radio-3" name="gender" value="Female" required <%=user.gender == 'Female'?'checked':''%>/>
               <label for="radio-3" class="radio-label">Female</label>
             </div>
           </div>
           <div class="form-group">
             <label for="status" class="text-light">Status</label>
             <div class="radio inline">
-              <input type="radio" id="radio-4" name="status" value="Active" <%=user.status == 'Active'?'checked':''%> />
+              <input type="radio" id="radio-4" name="status" value="Active" required <%=user.status == 'Active'?'checked':''%>/>
               <label for="radio-4" class="radio-label">Active</label>
             </div>
             <div class="radio inline">
-              <input type="radio" id="radio-5" name="status" value="Inactive" <%=user.status == 'Inactive'?'checked':''%> />
+              <input type="radio" id="radio-5" name="status" value="Inactive" required <%=user.status == 'Inactive'?'checked':''%>/>
               <label for="radio-5" class="radio-label">Inactive</label>
             </div>
           </div>
